--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -367,6 +367,13 @@
         }
       }
     }
+    #googleTranslate{
+    margin: 10px;
+    /* background-color: black; */
+    position: fixed;
+    right: 0;
+    bottom: 10;
+  }
   </style>
 </head>
 
@@ -470,6 +477,7 @@
       </div>
     </div>
   </main>
+
   <script>
     let mediafiles = [];
     let currentMedia;
@@ -533,6 +541,9 @@
 
     getmedia();
   </script>
+  
+
+   
 </body>
 
 </html>
