--- a/InquiryPage.html
+++ b/InquiryPage.html
@@ -436,8 +436,9 @@
     </a>
     <!-- <h1>WELCOME</h1> -->
     <div class="navBtn">
-      <button>Contact Us</button>
-      <button>About Us</button>
+      <a href="Homepage.html"><button>Home</button></a>
+      <a href="Contact.html"><button>Contact Us</button></a>
+        <a href="Contact.html"><button>About Us</button></a>
     </div>
   </nav>
 
