--- a/Documentation.html
+++ b/Documentation.html
@@ -78,7 +78,7 @@
             of Excellence for TVET in Mindanao.
           </p>
           <button>
-            <a href="https://enroll.korphildavao.site/register">Continue</a>
+            <a href="https://enroll.korphildavao.site/register" target="_blank" rel="noopener noreferrer">Continue</a>
           </button>
         </div>
         <div class="contentCard">
@@ -91,7 +91,7 @@
             schedules.
           </p>
           <button>
-            <a href="https://enroll.korphildavao.site/register">Continue</a>
+            <a href="https://enroll.korphildavao.site/register" target="_blank" rel="noopener noreferrer">Continue</a>
           </button>
         </div>
         <div class="contentCard">
@@ -104,7 +104,7 @@
             between the Center & the sponsoring partner.
           </p>
           <button>
-            <a href="https://enroll.korphildavao.site/register">Continue</a>
+            <a href="https://enroll.korphildavao.site/register" target="_blank" rel="noopener noreferrer">Continue</a>
           </button>
         </div>
       </div>
@@ -223,7 +223,7 @@
           efforts have provided a solid foundation for our ongoing
           development.
         </p>
-        <a href="https://korphil360.ditweb.net/">
+        <a href="https://korphil360.ditweb.net/" target="_blank" rel="noopener noreferrer">
           <h3>Start Virtual Tour</h3>
         </a>
       </div>
