--- a/Documentation.html
+++ b/Documentation.html
@@ -46,6 +46,7 @@
   </div>
   <main>
     <section class="greet" id="greet">
+      <img src="assets/images/admin/Admin_outside1.jpeg" alt="">
       <div class="greetContents">
         <h1>Hello, Student!</h1>
         <p>
@@ -637,7 +638,7 @@
       new google.translate.TranslateElement(
         {
           // pageLanguage: "en",
-          includedLanguages: "en,fil,ceb",
+          includedLanguages: "en,tl,ceb",
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
         },
         "googleTranslate"
