--- a/Homepage.html
+++ b/Homepage.html
@@ -365,7 +365,7 @@
     new google.translate.TranslateElement(
       {
         // pageLanguage: "en",
-        includedLanguages: "en,fil,ceb",
+        includedLanguages: "en,tl,ceb",
         layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
         autoDisplay: false,
       },
