--- a/Contact.html
+++ b/Contact.html
@@ -189,7 +189,7 @@
         <button onclick="adminModal.close()">Cancel</button>
       </form>
     </dialog>
-    <div class="aboutUs">
+    <section class="aboutUs" id="">
       <div class="left">
         <h1>Our Brief History</h1>
         <p>
@@ -220,7 +220,7 @@
           alt=""
         />
       </div>
-    </div>
+    </section>
 
     <section class="contact" id="contact">
       <!-- <div class="head">
