--- a/Homepage.html
+++ b/Homepage.html
@@ -32,8 +32,8 @@
     <!-- <h1>WELCOME</h1> -->
     <div class="navBtn">
 
-      <a href="Contact.html"><button>Contact Us</button></a>
-      <a href="Contact.html"><button>About Us</button></a>
+      <a href="Contact.html#contact"><button>Contact Us</button></a>
+      <a href="Contact.html#aboutUs"><button>About Us</button></a>
       <button onclick="adminModal.showModal()" class="adminbtn" style="background-color: none">
         <img src="assets/images/Icons/admin-alt.svg" alt="" />
         Admin
